rules.v4
# Generated by iptables-save v1.4.21 on Mon Jun  8 14:28:32 2020
*nat
:PREROUTING ACCEPT [34:2324]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [8:480]
-A POSTROUTING -s 192.168.20.3/32 -o eth0 -j MASQUERADE
COMMIT
# Completed on Mon Jun  8 14:28:32 2020
# Generated by iptables-save v1.4.21 on Mon Jun  8 14:28:32 2020
*filter
:INPUT DROP [6:468]
:FORWARD DROP [0:0]
:OUTPUT DROP [13:1144]
-A INPUT -s 192.168.20.2/32 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A FORWARD -s 192.168.20.3/32 -j ACCEPT
-A FORWARD -d 192.168.20.3/32 -j ACCEPT
-A FORWARD -s 192.168.20.4/32 -d 192.168.10.3/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A FORWARD -s 192.168.10.3/32 -d 192.168.20.4/32 -p tcp -m tcp -j ACCEPT
-A OUTPUT -d 192.168.20.2/32 -p tcp -m tcp --sport 22 -m state --state ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
COMMIT
# Completed on Mon Jun  8 14:28:32 2020
